--- a/responsive_box.html
+++ b/responsive_box.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-
+  <style>
+			* { margin:0; padding:0; }
+			.box { border:2px solid #1E2327; position:absolute; }
+		</style>
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js">
   </script>
