--- a/etc2/ani.html
+++ b/etc2/ani.html
@@ -42,9 +42,7 @@
 </head>
 
 <body>
-  <header>
-    Animation
-  </header>
+  <header>Animation</header>
   <section class="animation">
     <img src="arr.png" class="paper">
   </section>
@@ -62,33 +60,33 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/BezierPlugin.min.js"></script>
 
   <script>
-    const flightPath = {
-      curviness: 1.25,
-      autoRotate: true,
-      values: [
-        {x: 100,y: -20},{x: 300,y: 10},{x: 500,y: 100},{x: 750,y: -100},
-        {x: 350,y: -50},{x: 600,y: 100},{x: 800,y: 0},
-        {x: window.innerWidth,y: -150}
-        ]
-    };
-    const tween = new TimelineLite();
-    tween.add(
-      TweenLite.to('.paper', 1, {
-      bezier: flightPath,
-      ease: Power1.easeInOut
-      })
-    );
-    const controller = new ScrollMagic.Controller();
+const flightPath = {
+  curviness: 1.25,
+  autoRotate: true,
+  values: [
+    {x: 100,y: -20},{x: 300,y: 10},{x: 500,y: 100},{x: 750,y: -100},
+    {x: 350,y: -50},{x: 600,y: 100},{x: 800,y: 0},
+    {x: window.innerWidth,y: -150}
+    ]
+};
+const tween = new TimelineLite();
+tween.add(
+  TweenLite.to('.paper', 1, {
+  bezier: flightPath,
+  ease: Power1.easeInOut
+  })
+);
+const controller = new ScrollMagic.Controller();
 
-    const scene = new ScrollMagic.Scene({
-      triggerElement: '.animation',
-      duration: 3000,
-      triggerHook:0
-    })
-    .setTween(tween)
-    .addIndicators()
-    .setPin('.animation')
-    .addTo(controller);
+const scene = new ScrollMagic.Scene({
+  triggerElement: '.animation',
+  duration: 3000,
+  triggerHook:0
+})
+.setTween(tween)
+.addIndicators()
+.setPin('.animation')
+.addTo(controller);
 
   </script>
 
